--- a/Main Website/Location.html
+++ b/Main Website/Location.html
@@ -7,7 +7,7 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Home</title>
+<title>Location</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
          <li><a href='#'><span>Members Space</span></a></li>
       </ul>
    </li>
-   <li><a href='Location.html'><span>Our Location</span></a></li>
+   <li><a href='#'><span>Our Location</span></a></li>
    <li><a href='#'><span>Events</span></a></li>
    <li><a href='#'><span>Resources</span></a></li>
    <li><a href='#'><span>Contact</span></a></li>
@@ -33,13 +33,12 @@
 </div>
 </div>
 <div>
-  <p><img src="images/keyboard.jpg" id="mainimage"  style="width:inherit; height:400px; margin-top:10px; display: block;
-    margin-left: auto;
-    margin-right: auto;-webkit-border-radius: 10px;
-border-radius: 10px;  "  /><br />
-  <span class="Text"><span class="Text">Welcome to the NTU Computing Society page! We are a offical founded   society that allow for all people from with intrests in computing at   Nottingham Trent University to meet up, have social events and also   provide help with anyone who may be struggling with their learning.</span></span></span></p>
-<p class="Text"><span class="Text"><span class="Text"> We aren't all about going out and partying. Our main goals and   objectives are to provide a friendly group of like minded individuals in   which people from the computing courses at NTU will feel comfotable to   hang out with. We have other social events in mind; like paint balling,   gaming / movie nights and revision sessions for the looming exams! We   also have some intresting new devlopments for our society, we are   constanlty expanding.</span></span></p>
-  <p class="Text"><span class="Text"> We all hope that creating this society will make each and all of your university experiences even easier and more enjoyable.</span></p>
+  <p>Where to find us<span class="Text"></span></p>
+   <iframe style="text-align:center" width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=nottingham+trent+clifton+campus&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=35.494074,86.572266&amp;ie=UTF8&amp;hq=nottingham+trent+clifton+campus&amp;hnear=&amp;radius=15000&amp;ll=52.9117,-1.18373&amp;spn=0.071946,0.071946&amp;t=m&amp;output=embed"></iframe>
+  <p><br />
+    <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=nottingham+trent+clifton+campus&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=35.494074,86.572266&amp;ie=UTF8&amp;hq=nottingham+trent+clifton+campus&amp;hnear=&amp;radius=15000&amp;ll=52.9117,-1.18373&amp;spn=0.071946,0.071946&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+  </p>
+  <p>We can be found in the erd in nottingham trent university clifton campus.</p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
