Calender up tomcompsoc username
Password normal

--- a/Main Website/Events.html
+++ b/Main Website/Events.html
@@ -33,8 +33,8 @@
 </div>
 </div>
 <div>
-  <p>About us </p>
-  <p>We are a offical nottingham trent university society that formed in 2011 and have been going on strong ever since.</p>
+  <p>Events</p>
+  <p><SCRIPT src="http://www.localendar.com/public/Tomcompsoc?include=Y&dynamic=Y&style=M0"></SCRIPT></p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
