Lot of Work done on pages

--- a/Main Website/MemberProfilePage.html
+++ b/Main Website/MemberProfilePage.html
@@ -7,74 +7,33 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Location</title>
-<script src="../SpryAssets/SpryValidationPassword.js" type="text/javascript"></script>
-<script src="../SpryAssets/SpryValidationTextarea.js" type="text/javascript"></script>
-<script src="../SpryAssets/SpryValidationTextField.js" type="text/javascript"></script>
-<link href="../SpryAssets/SpryValidationPassword.css" rel="stylesheet" type="text/css" />
-<link href="../SpryAssets/SpryValidationTextarea.css" rel="stylesheet" type="text/css" />
-<link href="../SpryAssets/SpryValidationTextField.css" rel="stylesheet" type="text/css" />
+<title>Profile Page:Home</title>
 </head>
 
 <body>
 <div id='Menu'>
-  <p><img src="logo.png" width="30" height="30" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
- 
-  </p>
-  <div id='cssmenu'>
-    <ul>
-   <li class='active '><a href='index.html'><span>Home</span></a></li>
-   <li class='has-sub '><a href='#'><span>About Us</span></a>
+  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
+ </div>
+<div id='cssmenu'>
+  <ul>
+   <li class='active '><a href='Home.html'><span>Home</span></a></li>
+   <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
-         <li><a href='#'><span>What We Do</span></a></li>
-         <li><a href='#'><span>Comitee</span></a></li>
-         <li><a href='#'><span>Members Space</span></a></li>
+         <li><a href='About.html'><span>What We Do</span></a></li>
+         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
-   <li><a href='#'><span>Our Location</span></a></li>
-   <li><a href='#'><span>Events</span></a></li>
-   <li><a href='#'><span>Resources</span></a></li>
-   <li><a href='#'><span>Contact</span></a></li>
-</ul>
-</div>
-</div>
+   <li><a href='Location.html'><span>Our Location</span></a></li>
+   <li><a href='Events.html'><span>Events</span></a></li>
+   <li><a href='Resources.html'><span>Resources</span></a></li>
+   <li><a href='Contact.html'><span>Contact</span></a></li>
+</ul
+></div>
 <div>
-  <p>Are you a member of Compsoc please login or register here with your compsoc details</p>
-  <form>
-    <p>Login</p>
-    <p>
-      <label>Username</label>
-      <span id="sprytextfield1">
-      <label>
-        <input type="text" name="user" id="user" />
-      </label>
-      <span class="textfieldRequiredMsg">A value is required.</span></span><span id="sprytextarea1"><span class="textareaRequiredMsg">A value is required.</span></span>
-      <label>
-      Password</label>
-      <span id="sprypassword1">
-      <label>
-        <input type="password" name="pas" id="pas" />
-      </label>
-      <span class="passwordRequiredMsg">A value is required.</span></span>
-      <input type="submit" name="sub" id="sub" value="Submit" />
-      <label>
-        <input type="reset" name="reset" id="reset" value="Reset" />
-      </label>
-    </p>
-    <fieldset>
-      <legend>Register</legend>
-      <p>&nbsp;</p>
-    </fieldset>
-  </form>
+  <p><img src="images/1278626_under_construction_icon.jpg" alt="Construction" width="300" height="300" class="centerimage" /></p>
+  <p class="textmain">This part of our site is under construction. It will feature member profiles and their cvs. </p>
 </div>
-Or Please see our current members below
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
-<script type="text/javascript">
-<!--
-var sprypassword1 = new Spry.Widget.ValidationPassword("sprypassword1");
-var sprytextarea1 = new Spry.Widget.ValidationTextarea("sprytextarea1");
-var sprytextfield1 = new Spry.Widget.ValidationTextField("sprytextfield1");
-//-->
-</script>
 </body>
 </html>
