--- a/Main Website/Location.html
+++ b/Main Website/Location.html
@@ -13,32 +13,31 @@
 <body>
 <div id='Menu'>
   <p><img src="logo.png" width="30" height="30" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
- 
+ </div>
   </p>
   <div id='cssmenu'>
     <ul>
-   <li class='active '><a href='index.html'><span>Home</span></a></li>
-   <li class='has-sub '><a href='#'><span>About Us</span></a>
+   <li class='active '><a href='Home.html'><span>Home</span></a></li>
+   <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
-         <li><a href='#'><span>What We Do</span></a></li>
-         <li><a href='#'><span>Comitee</span></a></li>
-         <li><a href='#'><span>Members Space</span></a></li>
+         <li><a href='About.html'><span>What We Do</span></a></li>
+         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
-   <li><a href='#'><span>Our Location</span></a></li>
-   <li><a href='#'><span>Events</span></a></li>
-   <li><a href='#'><span>Resources</span></a></li>
-   <li><a href='#'><span>Contact</span></a></li>
-</ul>
-</div>
-</div>
+   <li><a href='Location.html'><span>Our Location</span></a></li>
+   <li><a href='Events.html'><span>Events</span></a></li>
+   <li><a href='Resources.html'><span>Resources</span></a></li>
+   <li><a href='Contact.html'><span>Contact</span></a></li>
+</ul
+></div>
 <div>
-  <p>Where to find us<span class="Text"></span></p>
-   <iframe style="text-align:center" width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=nottingham+trent+clifton+campus&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=35.494074,86.572266&amp;ie=UTF8&amp;hq=nottingham+trent+clifton+campus&amp;hnear=&amp;radius=15000&amp;ll=52.9117,-1.18373&amp;spn=0.071946,0.071946&amp;t=m&amp;output=embed"></iframe>
+  <p class="Headermain">Where to find us<span class="Text"></span></p>
+   <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=nottingham+trent+clifton+campus&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=35.494074,86.572266&amp;ie=UTF8&amp;hq=nottingham+trent+clifton+campus&amp;hnear=&amp;radius=15000&amp;ll=52.9117,-1.18373&amp;spn=0.071946,0.071946&amp;t=m&amp;output=embed" width="425" marginwidth="0" height="350" marginheight="0" scrolling="no" frameborder="0" class="centerimage" style="text-align:center"></iframe>
   <p><br />
-    <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=nottingham+trent+clifton+campus&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=35.494074,86.572266&amp;ie=UTF8&amp;hq=nottingham+trent+clifton+campus&amp;hnear=&amp;radius=15000&amp;ll=52.9117,-1.18373&amp;spn=0.071946,0.071946&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-  </p>
-  <p>We can be found in the erd in nottingham trent university clifton campus.</p>
+    <span class="textmain"><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=nottingham+trent+clifton+campus&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=35.494074,86.572266&amp;ie=UTF8&amp;hq=nottingham+trent+clifton+campus&amp;hnear=&amp;radius=15000&amp;ll=52.9117,-1.18373&amp;spn=0.071946,0.071946&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+  </span></p>
+  <p class="textmain">We can be found in the erd in nottingham trent university clifton campus.</p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
