--- a/Main Website/Contact.html
+++ b/Main Website/Contact.html
@@ -7,31 +7,30 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Location</title>
+<title>Contact</title>
 </head>
 
 <body>
 <div id='Menu'>
-  <p><img src="logo.png" width="30" height="30" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
- 
-  </p>
-  <div id='cssmenu'>
-    <ul>
-   <li class='active '><a href='index.html'><span>Home</span></a></li>
-   <li class='has-sub '><a href='#'><span>About Us</span></a>
+  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
+ </div>
+<div id='cssmenu'>
+  <ul>
+ <li class='active '><a href='Home.html'><span>Home</span></a></li>
+   <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
-         <li><a href='#'><span>What We Do</span></a></li>
-         <li><a href='#'><span>Comitee</span></a></li>
-         <li><a href='#'><span>Members Space</span></a></li>
+         <li><a href='About.html'><span>What We Do</span></a></li>
+         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
-   <li><a href='#'><span>Our Location</span></a></li>
-   <li><a href='#'><span>Events</span></a></li>
-   <li><a href='#'><span>Resources</span></a></li>
-   <li><a href='#'><span>Contact</span></a></li>
+   <li><a href='Location.html'><span>Our Location</span></a></li>
+   <li><a href='Events.html'><span>Events</span></a></li>
+   <li><a href='Resources.html'><span>Resources</span></a></li>
+   <li><a href='Contact.html'><span>Contact</span></a></li>
 </ul>
 </div>
-</div>
+
 <div>
   <p>Contact Us</p>
   <p>Please fill out the form below to contact us. </p>
@@ -125,7 +124,8 @@ if (typeof $.ui == 'undefined'){
   target="_blank"><font face="Verdana" size="2" color="#000000">Contact Form</font></a><br />
   <a style="line-height:20px;font-size:70%;text-decoration:none;" href="http://www.emailmeform.com/report-abuse.html?http://www.emailmeform.com/builder/form/eiafe370nq5JC5BV6bd447FI" target=
   "_blank"><font face="Verdana" size="2" color="#000000">Report Abuse</font></a>
-</div><script type="text/javascript">
+</div>
+<p class="centerimage"><script type="text/javascript">
 //<![CDATA[
 var emf_session_timeout_warner=new SessionTimeoutWarner(7200);
 
@@ -394,7 +394,7 @@ new TWTR.Widget({
   }
 }).render().setUser('NTUComputing').start();
 </script>
-
+</p>
 
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
