--- a/Main Website/Comitee.html
+++ b/Main Website/Comitee.html
@@ -16,7 +16,7 @@
  </div>
 <div id='cssmenu'>
   <ul>
-   <li class='active '><a href='Home.html'><span>Home</span></a></li>
+ <li class='active '><a href='Home.html'><span>Home</span></a></li>
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
@@ -30,7 +30,7 @@
    <li><a href='Contact.html'><span>Contact</span></a></li>
 </ul>
 </div>
-<div>
+
   <p class="textmain"><img src="images/group.jpg" alt="group" width="300" height="225" class="centerimage" /></p>
 <p class="textmain"><span class="Headermain">Our comitee is a group of students elected every year to take on each role below.  </span></p>
   <p class="textmain">Thomas Knowles - President    </p>
@@ -42,12 +42,9 @@
   <p class="Headermain">How to join the comitee?</p>
   <p class="textmain">You have to be an offical member of ntu computing society. There will be a annual vote on members every year so be sure to stand for your chosen position then. Ask one of the comittee members for more infomation.</p>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix">
-  <p class="centerimage"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
+  <p class="centerimage"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&quot;mailto:ntucomputingsociety@gmail.com&quot;"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 <script type="text/javascript">
 <!--
-var sprypassword1 = new Spry.Widget.ValidationPassword("sprypassword1");
-var sprytextarea1 = new Spry.Widget.ValidationTextarea("sprytextarea1");
-var sprytextfield1 = new Spry.Widget.ValidationTextField("sprytextfield1");
 //-->
 </script>
 </body>
