--- a/Main Website/Events.html
+++ b/Main Website/Events.html
@@ -7,36 +7,34 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Home</title>
+<title>Events</title>
 </head>
 
 <body>
 <div id='Menu'>
-  <p><img src="logo.png" width="30" height="30" alt="logo"/><span class="MenuText">Ntu Computing Society
-  </span></p>
- 
-  </p>
-  <div id='cssmenu'>
-    <ul>
-   <li class='active '><a href='index.html'><span>Home</span></a></li>
-   <li class='has-sub '><a href='#'><span>About Us</span></a>
+  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
+ </div>
+<div id='cssmenu'>
+  <ul>
+ <li class='active '><a href='Home.html'><span>Home</span></a></li>
+   <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
-         <li><a href='#'><span>What We Do</span></a></li>
-         <li><a href='#'><span>Comitee</span></a></li>
-         <li><a href='#'><span>Members Space</span></a></li>
+         <li><a href='About.html'><span>What We Do</span></a></li>
+         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
    <li><a href='Location.html'><span>Our Location</span></a></li>
-   <li><a href='#'><span>Events</span></a></li>
-   <li><a href='#'><span>Resources</span></a></li>
-   <li><a href='#'><span>Contact</span></a></li>
+   <li><a href='Events.html'><span>Events</span></a></li>
+   <li><a href='Resources.html'><span>Resources</span></a></li>
+   <li><a href='Contact.html'><span>Contact</span></a></li>
 </ul>
 </div>
-</div>
+
 <div>
   <p>Events</p>
   <p><SCRIPT src="http://www.localendar.com/public/Tomcompsoc?include=Y&dynamic=Y&style=M0"></SCRIPT></p>
 </div>
-<div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
+<div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="mailto:ntucomputingsociety@gmail.com"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
 </html>
