--- a/Main Website/Home.html
+++ b/Main Website/Home.html
@@ -12,26 +12,25 @@
 
 <body>
 <div id='Menu'>
-  <p><img src="logo.png" width="30" height="30" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
- 
-  </p>
-  <div id='cssmenu'>
-    <ul>
-   <li class='active '><a href='index.html'><span>Home</span></a></li>
-   <li class='has-sub '><a href='#'><span>About Us</span></a>
+  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
+ </div>
+<div id='cssmenu'>
+  <ul>
+ <li class='active '><a href='Home.html'><span>Home</span></a></li>
+   <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
-         <li><a href='#'><span>What We Do</span></a></li>
-         <li><a href='#'><span>Comitee</span></a></li>
-         <li><a href='#'><span>Members Space</span></a></li>
+         <li><a href='About.html'><span>What We Do</span></a></li>
+         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
    <li><a href='Location.html'><span>Our Location</span></a></li>
-   <li><a href='#'><span>Events</span></a></li>
-   <li><a href='#'><span>Resources</span></a></li>
-   <li><a href='#'><span>Contact</span></a></li>
+   <li><a href='Events.html'><span>Events</span></a></li>
+   <li><a href='Resources.html'><span>Resources</span></a></li>
+   <li><a href='Contact.html'><span>Contact</span></a></li>
 </ul>
 </div>
-</div>
+
 <div>
   <p><img src="images/keyboard.jpg" id="mainimage"  style="width:inherit; height:400px; margin-top:10px; display: block;
     margin-left: auto;
@@ -41,6 +40,6 @@ border-radius: 10px;  "  /><br />
 <p class="textmain"> We aren't all about going out and partying. Our main goals and   objectives are to provide a friendly group of like minded individuals in   which people from the computing courses at NTU will feel comfotable to   hang out with. We have other social events in mind; like paint balling,   gaming / movie nights and revision sessions for the looming exams! We   also have some intresting new devlopments for our society, we are   constanlty expanding.</p>
   <p class="textmain"> We all hope that creating this society will make each and all of your university experiences even easier and more enjoyable.</p>
 </div>
-<div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
+<div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="mailto:ntucomputingsociety@gmail.com"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
 </html>
