--- a/Main Website/Member Profile Test Page.html
+++ b/Main Website/Member Profile Test Page.html
@@ -32,17 +32,27 @@
 </div>
 
 <div>
-<p style="text-align:center; position:inherit;><img src="images/larrytest.jpg" width="207" height="158" alt="testimage" /><img src="images/larrytest.jpg" alt="larrytest" width="291" height="222" class="centerimage" />
+<p style="text-align:center; position:inherit;><img src="images/larrytest.jpg" width="207" height="158" alt="testimage" />
 </p>
-<p class="textmain">Member Name: Larry The Lamb<br />
+<img src="images/jacob.jpg" alt="me" width="139" height="183" class="centerimage" />
+<p class="textmain">Member Name:Jacob Gould </p>
+<p class="textmain">Position: Vice-President<br />
   <br />
-  Member Bio: Larry the lamb was a normal sheep until he was blasted by lightning. Now he is lightning larry the lamb. </p>
+  Member Bio: Jacob is an active member of the computing society. He is a third year at nottingham trent university and have took part in a lot of coding events around the uk. </p>
+<p class="textmain">Coding Langauges: c++,xna,c#,java </p>
+<p class="textmain">Other skills: Webdesign with art</p>
 <p class="textmain">CV: Link</p>
 <p class="textmain">Projects and Development links:</p>
-<p class="textmain">Cutting Grass xna </p>
-<p class="textmain">Img</p>
-<p class="textmain">A game where you cut grass.</p>
+<p class="textmain">The Computing society website 2012<br />
+  <br />
+  </p>
+<p class="textmain">Some Projects:</p>
+<p class="textmain"><br />
+  Art on Rebirth Nottingham Global Game Jam Nottinghack 2012</p>
+<p class="textmain"><img src="http://globalgamejam.org/sites/default/files/uploads/2012/21351/Screenshot.png?1327849964" alt="screenshot" width="245" height="142" class="centerimage" title="screenshot" /></p>
+<p class="textmain">3D Xna Engine.<br />
+</p>
 </div>
-<div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&lt;a href=&quot;mailto:ntucomputingsociety@gmail.com&quot;&gt;Email Me&lt;/a&gt; "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
+<div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="mailto:ntucomputingsociety@gmail.com "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
 </html>
