A few little spelling fixes etc.

--- a/Main Website/Resources.html
+++ b/Main Website/Resources.html
@@ -20,7 +20,7 @@
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
-         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='Comitee.html'><span>Committee</span></a></li>
          <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
@@ -40,7 +40,7 @@
 <p class="textmain">Our sponsers and associates </p>
 <p class="textmain"><img src="images/ntsu_logo.png" alt="ntsu" width="590" height="200" class="centerimage" /></p>
 <p class="textmain"><a href="https://www.facebook.com/groups/ntucomputer/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" alt="facebook" width="32" height="32" class="centerimage" /></a></p>
-<p class="textmain"><a href="https://www.facebook.com/groups/ntucomputer/">Jacob's Facebook group for ntu computing students</a></p>
+<p class="textmain"><a href="https://www.facebook.com/groups/ntucomputer/">Jacob's Facebook group for NTU Computing students</a></p>
 <p class="textmain"><br />
 </p>
 <p>&nbsp;</p>
