--- a/Main Website/Contact.html
+++ b/Main Website/Contact.html
@@ -7,12 +7,12 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Contact</title>
+<title>NTU Computing Society: Contact</title>
 </head>
 
 <body>
 <div id='Menu'>
-  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
+  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">NTU Computing Society</span></p>
  </div>
 <div id='cssmenu'>
   <ul>
@@ -20,7 +20,7 @@
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
-         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='Comitee.html'><span>Committee</span></a></li>
          <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
