--- a/Main Website/Home.html
+++ b/Main Website/Home.html
@@ -7,12 +7,12 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Home</title>
+<title>NTU Computing Society: Home</title>
 </head>
 
 <body>
 <div id='Menu'>
-  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
+  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">NTU Computing Society</span></p>
  </div>
 <div id='cssmenu'>
   <ul>
@@ -20,7 +20,7 @@
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
-         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='Comitee.html'><span>Committee</span></a></li>
          <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
@@ -36,8 +36,8 @@
     margin-left: auto;
     margin-right: auto;-webkit-border-radius: 10px;
 border-radius: 10px;  "  /><br />
-  <span class="textmain">Welcome to the NTU Computing Society page! We are a offical founded   society that allow for all people from with intrests in computing at   Nottingham Trent University to meet up, have social events and also   provide help with anyone who may be struggling with their learning.</span></span></p>
-<p class="textmain"> We aren't all about going out and partying. Our main goals and   objectives are to provide a friendly group of like minded individuals in   which people from the computing courses at NTU will feel comfotable to   hang out with. We have other social events in mind; like paint balling,   gaming / movie nights and revision sessions for the looming exams! We   also have some intresting new devlopments for our society, we are   constanlty expanding.</p>
+  <span class="textmain">Welcome to the NTU Computing Society page! We are a official founded society that allow for all people from with interests in computing at   Nottingham Trent University to meet up, have social events and also provide help with anyone who may be struggling with their learning.</span></span></p>
+<p class="textmain"> We aren't all about going out and partying. Our main goals and objectives are to provide a friendly group of like minded individuals in which people from the computing courses at NTU will feel comfortable to hang out with. We have other social events in mind; like paint balling, gaming / movie nights and revision sessions for the looming exams! We also have some interesting new developments for our society, we are   constantly expanding.</p>
   <p class="textmain"> We all hope that creating this society will make each and all of your university experiences even easier and more enjoyable.</p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="mailto:ntucomputingsociety@gmail.com"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
