--- a/Main Website/Location.html
+++ b/Main Website/Location.html
@@ -7,12 +7,12 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Location</title>
+<title>NTU Computing Society: Location</title>
 </head>
 
 <body>
 <div id='Menu'>
-  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">Ntu Computing Society</span></p>
+  <p><img src="logo.png" width="100" height="75" alt="logo"/><span class="MenuText">NTU Computing Society</span></p>
  </div>
 <div id='cssmenu'>
   <ul>
@@ -20,7 +20,7 @@
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
-         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='Comitee.html'><span>Committee</span></a></li>
          <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
@@ -36,7 +36,7 @@
   <p><br />
     <span class="textmain"><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=nottingham+trent+clifton+campus&amp;aq=&amp;sll=37.0625,-95.677068&amp;sspn=35.494074,86.572266&amp;ie=UTF8&amp;hq=nottingham+trent+clifton+campus&amp;hnear=&amp;radius=15000&amp;ll=52.9117,-1.18373&amp;spn=0.071946,0.071946&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
   </span></p>
-  <p class="textmain">We can be found in the erd in nottingham trent university clifton campus.</p>
+  <p class="textmain">We can be found in ERD at Nottingham Trent University on the Clifton campus.</p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="mailto:ntucomputingsociety@gmail.com"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
