--- a/Main Website/Member Profile Test Page.html
+++ b/Main Website/Member Profile Test Page.html
@@ -7,7 +7,7 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Location</title>
+<title>NTU Computing Society: Jacob Gould</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
    <li class='has-sub '><a href='#'><span>About Us</span></a>
       <ul>
          <li><a href='#'><span>What We Do</span></a></li>
-         <li><a href='#'><span>Comitee</span></a></li>
+         <li><a href='#'><span>Committee</span></a></li>
          <li><a href='#'><span>Members Space</span></a></li>
       </ul>
    </li>
