--- a/Main Website/MemberProfilePage.html
+++ b/Main Website/MemberProfilePage.html
@@ -7,7 +7,7 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Profile Page:Home</title>
+<title>NTU Computing Society: Profiles Under Construction</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
-         <li><a href='Comitee.html'><span>Comitee</span></a></li>
+         <li><a href='Comitee.html'><span>Committee</span></a></li>
          <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
@@ -32,7 +32,7 @@
 ></div>
 <div>
   <p><img src="images/1278626_under_construction_icon.jpg" alt="Construction" width="300" height="300" class="centerimage" /></p>
-  <p class="textmain">This part of our site is under construction. It will feature member profiles and their cvs. </p>
+  <p class="textmain">This part of our site is under construction. It will feature member profiles and their CVs. </p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="mailto:ntucomputingsociety@gmail.com "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
