spelling and little fixes again

--- a/Main Website/About.html
+++ b/Main Website/About.html
@@ -16,7 +16,7 @@
  </div>
 <div id='cssmenu'>
   <ul>
- <li class='active '><a href='Home.html'><span>Home</span></a></li>
+ <li class='active '><a href='/'><span>Home</span></a></li>
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
@@ -34,15 +34,15 @@
 <div>
   <p class="Headermain">About us <br />
     <br />
-    <span class="textmain"><span class="textmain">Welcome to the NTU Computing Society website! We are a offical founded   society that allow for all people from with intrests in computing at   Nottingham Trent University to meet up, have social events and also   provide help with anyone who may be struggling with their learning.</span></span></p>
-<p class="textmain"><span class="textmain"> We aren't all about going out and partying. Our main goals and   objectives are to provide a friendly group of like minded individuals in   which people from the computing courses at NTU will feel comfotable to   hang out with. We have other social events in mind; like paint balling,   gaming / movie nights and revision sessions for the looming exams! We   also have some intresting new devlopments for our society, we are   constanlty expanding.</span></p>
+    <span class="textmain"><span class="textmain">Welcome to the NTU Computing Society website! We are a official founded   society that allow for all people from with interests in computing at   Nottingham Trent University to meet up, have social events and also   provide help with anyone who may be struggling with their learning.</span></span></p>
+<p class="textmain"><span class="textmain"> We aren't all about going out and partying. Our main goals and   objectives are to provide a friendly group of like minded individuals in   which people from the computing courses at NTU will feel comfortable to   hang out with. We have other social events in mind; like paint balling,   gaming / movie nights and revision sessions for the looming exams! We   also have some interesting new developments for our society, we are   constantly expanding.</span></p>
   <p class="textmain"><span class="textmain"> We all hope that creating this society will make each and all of your university experiences even easier and more enjoyable.  </span></p>
   <p> <span class="textmain"><span class="textmain">We'll be making a big entrance at freshers fair 2012 our stalls can be seen at</span></span></p>
-  <p class="textmain"> <span class="textmain"><a href="images/city.jpg" target="_parent">Number 14 at city</a> and <a href="images/clifton.jpg">number 54 at clifton</a> see <a href="http://www.trentstudents.org/fair/" target="_parent">http://www.trentstudents.org/fair/</a> for maps</span></p>
+  <p class="textmain"> <span class="textmain"><a href="images/city.jpg" target="_parent">Number 14 at city</a> and <a href="images/clifton.jpg">number 54 at clifton</a> see <a href="http://www.trentstudents.org/fair/" target="_parent">student union fair</a> for maps</span></p>
   <p class="textmain"><span class="textmain"> Our current President is Thomas Knowles, and vice Jacob Gould</span></p>
-  <p class="textmain"><span class="textmain"> We mantain an active comitee for members to get involved in joining our   vibrant comitee in making key decsions and taking part in our exicting   expanding society.</span></p>
+  <p class="textmain"><span class="textmain"> We maintain an active committee for members to get involved in joining our   vibrant committee in making key decisions and taking part in our exciting   expanding society.</span></p>
   <p class="textmain"><span class="textmain"><span class="Headermain">Joining Instructions</span></span></p>
-  <p class="textmain"><span class="textmain">To join are you a student at Nottingham trent university? If so you can join at <a href="http://www.trentstudents.org/societies">http://www.trentstudents.org/societies</a>.Or meet a comitee member and we can help you join.</span></p>
+  <p class="textmain"><span class="textmain">To join are you a student at Nottingham Trent University? If so you can join at <a href="http://www.trentstudents.org/societies">the student union</a>. Or meet a committee member and we can help you join.</span></p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="&quot;mailto:ntucomputingsociety@gmail.com&quot;"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
