--- a/Main Website/Comitee.html
+++ b/Main Website/Comitee.html
@@ -16,7 +16,7 @@
  </div>
 <div id='cssmenu'>
   <ul>
- <li class='active '><a href='Home.html'><span>Home</span></a></li>
+ <li class='active '><a href='/'><span>Home</span></a></li>
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
@@ -36,7 +36,7 @@
   <p class="textmain">Thomas Knowles - President    </p>
   <p class="textmain">Jacob Gould - Vice President    </p>
   <p class="textmain">Russel Claxton - Treasurer    </p>
-  <p class="textmain">Charlotte Niel - Revison Co-Ordinator    </p>
+  <p class="textmain">Charlotte Niel - Revision Co-Ordinator    </p>
   <p class="textmain">Alex Bowyer - Event Manager    </p>
   <p class="textmain">Freddie Skinner - Group Co-ordinator</p>
   <p class="Headermain">How to join the committee?</p>
