--- a/Main Website/Jacob.html
+++ b/Main Website/Jacob.html
@@ -7,7 +7,7 @@
 <link rel="icon" 
       type="image/png" 
       href="icon.png" />
-<title>Location</title>
+<title>NTU Comping Society: Jacob Gould</title>
 </head>
 
 <body>
