--- a/Main Website/Location.html
+++ b/Main Website/Location.html
@@ -16,7 +16,7 @@
  </div>
 <div id='cssmenu'>
   <ul>
-   <li class='active '><a href='Home.html'><span>Home</span></a></li>
+   <li class='active '><a href='/'><span>Home</span></a></li>
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
