--- a/Main Website/Resources.html
+++ b/Main Website/Resources.html
@@ -16,7 +16,7 @@
  </div>
 <div id='cssmenu'>
   <ul>
- <li class='active '><a href='/'><span>Home</span></a></li>
+ <li class='active '><a href='index.html'><span>Home</span></a></li>
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
@@ -41,7 +41,22 @@
 <p class="textmain"><a href="images/ntsu_logo.png"><img src="images/ntsu_logo.png" alt="ntsu" width="590" height="200" class="centerimage" /></a></p>
 <p class="textmain">&nbsp;</p>
 <p class="textmain"><a href="https://www.facebook.com/groups/ntucomputer/">Jacob's Facebook group for ntu computing students</a><a href="https://www.facebook.com/groups/ntucomputer/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" alt="facebook" width="32" height="32" class="centerimage" /></a></p>
-<p class="textmain"><br />
+<p class="textmain"><form method="get" action="http://www.google.com/search">
+
+<div style="border:1px solid black;padding:4px;width:20em;">
+<table border="0" cellpadding="0">
+<tr><td>
+<input type="text"   name="q" size="25"
+ maxlength="255" value="" />
+<input type="submit" value="Google Search" /></td></tr>
+<tr><td align="center" style="font-size:75%">
+<input type="checkbox"  name="sitesearch"
+ value="ntucomputingsociety.com" checked /> only search this site<br />
+</td></tr></table>
+</div>
+
+</form>
+<br />
 </p>
 <p>&nbsp;</p>
 </div>
