--- a/Main Website/MemberProfilePage.html
+++ b/Main Website/MemberProfilePage.html
@@ -16,7 +16,7 @@
  </div>
 <div id='cssmenu'>
   <ul>
-   <li class='active '><a href='/'><span>Home</span></a></li>
+   <li class='active '><a href='index.html'><span>Home</span></a></li>
    <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
          <li><a href='About.html'><span>What We Do</span></a></li>
@@ -37,6 +37,7 @@
 (More Coming Soon)</p>
 <p class="Text">Thomas Knowles </p>
   <p class="Text"><a href="Jacob.html">Jacob Gould</a></p>
+  <p class="Text">&nbsp;</p>
 </div>
 <div class="FooterSocialbar" id="Footer"><div class="imgfix" id="imgfix"><a href="http://www.trentstudents.org/comp/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/aboutme.png" width="32" height="32" alt="bout" /></a><a href="mailto:ntucomputingsociety@gmail.com "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" width="32" height="32" alt="Email" /></a><a href="https://www.facebook.com/groups/NtuComputingSociety/"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/facebook.png" width="32" height="32" alt="Facebook" /></a><a href="https://twitter.com/NTUComputing"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/twitter.png" width="32" height="32" alt="Twitter" /></a><a href="https://plus.google.com/u/0/110458565576487552813"><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/google-plus.png" width="32" height="32" alt="G+" /></a><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/paypal.png" width="32" height="32" alt="PaypalDonations" /><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/stackoverflow.png" width="32" height="32" alt="StackOverflow" /></div></div>
 </body>
