few jacob profile changes

--- a/Main Website/Jacob.html
+++ b/Main Website/Jacob.html
@@ -16,18 +16,18 @@
  </div>
 <div id='cssmenu'>
   <ul>
-   <li class='active '><a href='index.html'><span>Home</span></a></li>
-   <li class='has-sub '><a href='#'><span>About Us</span></a>
+  <li class='active '><a href='index.html'><span>Home</span></a></li>
+   <li class='has-sub '><a href='About.html'><span>About Us</span></a>
       <ul>
-         <li><a href='#'><span>What We Do</span></a></li>
-         <li><a href='#'><span>Comitee</span></a></li>
-         <li><a href='#'><span>Members Space</span></a></li>
+         <li><a href='About.html'><span>What We Do</span></a></li>
+         <li><a href='Comitee.html'><span>Committee</span></a></li>
+         <li><a href='MemberProfilePage.html'><span>Members Space</span></a></li>
       </ul>
    </li>
-   <li><a href='#'><span>Our Location</span></a></li>
-   <li><a href='#'><span>Events</span></a></li>
-   <li><a href='#'><span>Resources</span></a></li>
-   <li><a href='#'><span>Contact</span></a></li>
+   <li><a href='Location.html'><span>Our Location</span></a></li>
+   <li><a href='Events.html'><span>Events</span></a></li>
+   <li><a href='Resources.html'><span>Resources</span></a></li>
+   <li><a href='Contact.html'><span>Contact</span></a></li>
 </ul>
 </div>
 
