Added 3D viewer on s.a. profile and some work to jacob

--- a/Main Website/Jacob.html
+++ b/Main Website/Jacob.html
@@ -41,16 +41,18 @@
 <p><span class="textmain"><span class="Headermain" style="text-align:center; position:inherit;&gt;&lt;img src="><span class="Headermain" style="text-align:center; position:inherit;&gt;&lt;img src="><span class="Headermain" style="text-align:center; position:inherit;&gt;&lt;img src="><img src="cv.png" alt="cv" width="70" height="102" class="centerimage" /></span></span></span></span></p>
 <p><a href="mailto:jacob.gould@ntlworld.com "><img src="images/Social media icons/Vector Social Media Icons/PNG/32px/email.png" alt="Email" width="32" height="32" class="centerimage" /></a><br />
   <br />
-  <span class="Headermain">Member Bio:</span> <span class="textmain">Jacob is an active member of the computing society. He is a third year at nottingham trent university and have took part in a lot of coding events around the uk. He is a keen art and web developer, in his spare time and has knowelge of flash. </span></p>
+  <span class="Headermain">Member Bio:</span> <span class="textmain">Jacob is an active member of the computing society. He is a third year at nottingham trent university and have took part in a lot of coding events around the uk. He is a keen art and web developer, in his spare time and has knowelge of flash. He is a student ambassador at nottingham trent univesity and was a second year course rep. He has also done volunteer work in mentoring and toe by toe schemes. He has a keen knowelge of Adobe Illustrator and Photoshop for artwork and have been producing art for a number of years.</span></p>
 <p class="Headermain">Badges (Skills):</p>
 <p class="Headermain"><img src="images/Badges/xna.png" width="225" height="225" alt="XnaBadge" /><img src="images/Badges/winphonedev.png" width="225" height="225" alt="winphone" /><img src="images/Badges/webdev.png" width="225" height="225" alt="webdev" /><img src="images/Badges/flash.png" width="225" height="225" alt="flash" /></p>
 <p class="Headermain"><img src="images/Badges/bussiness.png" width="225" height="225" alt="management" /><img src="images/Badges/art.png" width="225" height="225" alt="art" /><img src="images/Badges/c++.png" width="225" height="225" alt="c++" /><img src="images/Badges/design.png" width="225" height="225" alt="design" /></p>
 <p class="textmain">&nbsp;</p>
 <p class="Headermain">Projects and Development links:</p>
 <p class="Headermain"><span class="Text"><br />
-  Art on Rebirth Nottingham Global Game Jam Nottinghack 2012</span></p>
-<p class="Headermain"><img src="http://globalgamejam.org/sites/default/files/uploads/2012/21351/Screenshot.png?1327849964" alt="screenshot" width="245" height="142" class="centerimage" title="screenshot" /><span class="Headermain"><span class="Text">3D Xna Engine.<br />
-  The Computing society website 2012<br />
+  Art (only) on Rebirth Nottingham Global Game Jam (Nottingham hackspace) 2012</span></p>
+<p class="Headermain"><img src="http://globalgamejam.org/sites/default/files/uploads/2012/21351/Screenshot.png?1327849964" alt="screenshot" width="245" height="142" class="centerimage" title="screenshot" /><span class="Headermain"><span class="imgfix"><br />
+  Other Areas: <br />
+  <a href="3d.zip">3D Xna Model Viewer</a><br />
+  <a href="www.ntucomputingsociety.com">The Computing society website 2012</a><br />
   Flash Game Engine<br />
 Team Windows Phone Game 
 </span></span><br />
