few updates to sa profile

--- a/Main Website/Stefan.html
+++ b/Main Website/Stefan.html
@@ -46,7 +46,9 @@
 <p class="textmain">&nbsp;</p>
 <p class="Headermain">Projects and Development links:</p>
 <p class="Headermain">Some 3d Modeling examples: </p>
-<p class="Headermain"><iframe class="sculpteo-viewer" type="text/html" width="300" height="360" src="http://www.sculpteo.com/embed/design/PMCNJQoV" frameborder="0" scrolling="no"></iframe></p>
+<p class="imgfix">
+<iframe class="sculpteo-viewer" type="text/html" width="640" height="700" src="http://www.sculpteo.com/embed/design/HEWuoPpq?viewer=webgl" frameborder="0" scrolling="no"></iframe>
+</p>
 <p class="Text"><img src="images/table.jpg" width="250" height="200" alt="table" /><img src="images/stpall.jpg" width="250" height="200" alt="stpall" /><img src="images/bow.jpg" width="250" height="200" alt="bow" /></p>
 <p class="Headermain"><span class="Text"><br />
 </span></p>
