Few style fixes

--- a/Main Website/Comitee.html
+++ b/Main Website/Comitee.html
@@ -31,7 +31,7 @@
 </ul>
 </div>
 
-  <p class="textmain"><img src="images/group.jpg" alt="group" width="300" height="225" class="centerimage" /></p>
+  <p class="textmain"><img src="images/group.jpg" alt="group" width="300" height="225" style="float:right;" /></p>
 <p class="textmain"><span class="Headermain">Our committee is a group of students elected every year to take on each role below  </span></p>
   <p class="textmain">Thomas Knowles - President    </p>
   <p class="textmain">Jacob Gould - Vice President    </p>
