--- a/Main Website/Contact.html
+++ b/Main Website/Contact.html
@@ -49,7 +49,7 @@ if (typeof $.ui == 'undefined'){
 }
 </script>
 <script type="text/javascript" src="http://www.emailmeform.com/builder/js/dynamic.php?t=post&t2=0&use_CDN=true"></script>
-<div id="emf-container-outer">
+<div id="emf-container-outer" style="float:left;">
   <div id="emf-container">
     <div id="emf-logo">
       <a>EmailMeForm</a>
@@ -115,15 +115,11 @@ if (typeof $.ui == 'undefined'){
           'set_form_hidden_field($("#emf-form")[0],"save_and_resume", "true"); submit_form($("#emf-form")[0], false); return false;' />
         </li>
       </ul><input name="element_counts" value="3" type="hidden" /> <input name="embed" value="forms" type="hidden" />
+<p>Powered by EMF Contact Form.</p>
     </form>
   </div>
 </div><br />
 <div style="text-align:center">
-  <font face="Verdana" size="2" color="#000000">Powered by</font><span style="position: relative; padding-left: 3px; bottom: -5px;"><img src=
-  "http://www.emailmeform.com/builder/images/footer-logo.png" /></span><font face="Verdana" size="2" color="#000000">EMF</font> <a style="text-decoration:none;" href="http://www.emailmeform.com/"
-  target="_blank"><font face="Verdana" size="2" color="#000000">Contact Form</font></a><br />
-  <a style="line-height:20px;font-size:70%;text-decoration:none;" href="http://www.emailmeform.com/report-abuse.html?http://www.emailmeform.com/builder/form/eiafe370nq5JC5BV6bd447FI" target=
-  "_blank"><font face="Verdana" size="2" color="#000000">Report Abuse</font></a>
 </div>
 <p class="centerimage"><script type="text/javascript">
 //<![CDATA[
